<resources>
    <string name="version">1</string>
    <string name="catalog">classmanager.db</string>
    <string name="app_name">ClassManager</string>
    <string name="fragment_login_button_login">Login</string>
    <string name="fragment_login_text_password">Password</string>
    <string name="fragment_login_text_email">Email</string>
    <string name="dummy_view">Dummy View</string>
    <string name="button">Logout</string>
    <string name="fragment_register_text_view_close">Close</string>
    <string name="fragment_register_button_email">Email</string>
    <string name="fragment_register_text_firstname">First Name</string>
    <string name="fragment_register_text_lastname">Last Name</string>
    <string name="fragment_register_text_password">Password</string>
    <string name="fragment_register_button_register">Register</string>
    <string name="fragment_register_button_cancel">Cancel</string>
    <string name="fragment_login_button_signup">Sign Up</string>
    <string name="message_no_email_error">Please enter your email</string>
    <string name="message_no_password_error">Please enter your password</string>
    <string name="message_no_firstname_error">Please enter your first name</string>
    <string name="message_no_lastname_error">Please enter your last name</string>
    <string name="message_minimun_char_8">Minimun is 8 character</string>
</resources>
